--- a/skin/bower.json
+++ b/skin/bower.json
@@ -14,6 +14,8 @@
     "waypoints": "^4.0.0",
     "animate.css": "^3.5.2",
     "parallax.js": "^1.4.2",
-    "lightgallery": "^1.2.21"
+    "lightgallery": "^1.2.21",
+    "jquery-ui": "^1.12.0",
+    "jquery-ui-multiselect-widget": "1.14"
   }
 }
